Fixes spacing on display page

--- a/src/sass/tokenly.sass
+++ b/src/sass/tokenly.sass
@@ -68,6 +68,7 @@ h6
 
 p
   line-height: 1.6
+  margin-top: 0
 
 hr
   background-color: transparent
